# xinoschess

./: .gitignore  CMakeLists.txt  logfile.txt  main.cpp  readme  readme.md  readme.txt
chessv2/: game.cpp  game.h  move.cpp  move.h  piece.cpp  piece.h  utilities.cpp  utilities.h
cnn/: cnn.cpp  cnn.h  kernel.cpp  kernel.h  neuron.cpp  neuron.h
mcts/: mcts.cpp  mcts.h  node.cpp  node.h
